# distil-whisper-FastRTC

./: .gitignore  LICENSE  README.md  build_package.py  pyproject.toml  setup.py  test_import.py  test_output.py  upload_to_pypi.py  venv_test.py
examples/: basic_usage.py  exampleSmolagent.py  fastrtc_integration.py
examples/FastRTC_app/: TRANSCRIPTION_APPS_README.md  combined_transcription_app.py  fastrtc_transcription_app.py  file_transcription_app.py
src/distil_whisper_fastrtc/: __init__.py  model.py  utils.py
tests/: test_model.py
