[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distil-whisper-fastrtc"
version = "0.1.0"
description = "Distil-Whisper wrapper for FastRTC speech-to-text"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.10.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",  # For faster inference
]

[project.urls]
"Homepage" = "https://github.com/yourusername/distil-whisper-fastrtc"
"Bug Tracker" = "https://github.com/yourusername/distil-whisper-fastrtc/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]
audio = [
    "librosa>=0.9.0",  # For audio processing
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
